# substrate-guide

./: .gitignore
erc20/: Cargo.toml
erc20/runtime/: Cargo.toml
erc20/runtime/src/: erc20.rs  lib.rs
erc20/runtime/wasm/: Cargo.toml
erc20/src/: chain_spec.rs  main.rs
trc/: Cargo.toml  README.md
trc/runtime/: Cargo.toml
trc/runtime/src/: lib.rs  tcr.rs  token.rs
trc/runtime/wasm/: Cargo.toml  build.sh
trc/runtime/wasm/src/: lib.rs
trc/src/: chain_spec.rs  main.rs  service.rs
