[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['erc20-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'erc20-runtime-wasm'
version = '1.0.0'
[dependencies.erc20-runtime]
default-features = false
path = '..'
