[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['trc-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'trc-runtime-wasm'
version = '1.0.0'
[dependencies.trc-runtime]
default-features = false
path = '..'
